added password hashing and salting

--- a/cybersecurity/login_and_registration/Makefile
+++ b/cybersecurity/login_and_registration/Makefile
@@ -1,6 +1,7 @@
 CXX = g++
 CXXFLAGS = -std=c++17 -Wall -Wextra -O2 -Iheaders
 LDFLAGS  = -lsqlite3
+CRYPT = -lssl -lcrypto
 
 SRC_DIR = src
 BIN_DIR = bin
@@ -13,7 +14,7 @@ all: $(TARGET)
 
 $(TARGET): $(SRCS)
 	mkdir -p $(BIN_DIR)
-	$(CXX) $(CXXFLAGS) $^ $(LDFLAGS) -o $@
+	$(CXX) $(CXXFLAGS) $^ $(CRYPT) $(LDFLAGS) -o $@
 
 clean:
 	rm -f $(TARGET) $(DB)
